2017-08-26  Markus Gans  <guru.mail@muenster.de>
	* Improve code readability through spaces between 
	  the operands and the operators

2017-08-24  Markus Gans  <guru.mail@muenster.de>
	* Rename fapp.{cpp,h} to fapplication.{cpp,h}

2017-08-20  Markus Gans  <guru.mail@muenster.de>
	* Screen characters got a union structure for a faster 
	  attribute compare operation

2017-08-11  Markus Gans  <guru.mail@muenster.de>
	* Some code changes for GCC 7
	* Implementation of a copy constructor for FPoint and FRect

2017-08-06  Markus Gans  <guru.mail@muenster.de>
	* Fix GNU Screen support for vte/gnome-terminals
	* Advanced streaming functionality for FTermBuffer 
	  and FVTerm::print()

2017-07-31  Markus Gans  <guru.mail@muenster.de>
	* New methods to retrieve or modify FListViewItem text or 
	  a FListView column text for a specific column

2017-07-28  Markus Gans  <guru.mail@muenster.de>
	* Possibility for a FListView column to set 
	  the alignment (left, center or right)

2017-07-23  Markus Gans  <guru.mail@muenster.de>
	* Check an object with isInstanceOf(...) whether it is 
	  an instance of a specified class

2017-07-18  Markus Gans  <guru.mail@muenster.de>
	* New Widget class FListView (filled with FListViewItem) 
	  to allow a multi-column data view
        * Add the listview example to demonstrate FListView

2017-07-11  Markus Gans  <guru.mail@muenster.de>
	* New class FTermBuffer to buffer terminal outputs
	* Add the possibility to print from the terminal buffer

2017-07-03  Markus Gans  <guru.mail@muenster.de>
	* Use more static const variables where it makes sense

2017-06-26  Markus Gans  <guru.mail@muenster.de>
	* FString::rtrim() and FString::left() now return an FString 
	  object with the correct character length

2017-06-18  Markus Gans  <guru.mail@muenster.de>
	* Move the dragScroll enumeration into the fc namespace

2017-06-11  Markus Gans  <guru.mail@muenster.de>
	* New method FObject::isWidget()