@@ -1,3 +1,6 @@
+2017-91-03  Markus Gans  <guru.mail@muenster.de>
+	* Fixes wrong maximum line width in FListView
+
 2017-08-26  Markus Gans  <guru.mail@muenster.de>
 	* Improve code readability through spaces between 
 	  the operands and the operators
